--- a/dynamics-mcp.csproj
+++ b/dynamics-mcp.csproj
@@ -16,7 +16,14 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0-preview.5.25277.114" />
+        <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.0" />
         <PackageReference Include="ModelContextProtocol" Version="0.2.0-preview.3" />
+        
+        <!-- Test dependencies -->
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
+        <PackageReference Include="xunit" Version="2.9.2" />
+        <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
+        <PackageReference Include="Moq" Version="4.20.72" />
     </ItemGroup>
 
 </Project>
